tests/baselines/reference/privateNameAndAny.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(9,15): error TS2339: Property '#bar' does not exist on type 'any'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(13,9): error TS2571: Object is of type 'unknown'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(14,9): error TS2571: Object is of type 'unknown'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(15,9): error TS2571: Object is of type 'unknown'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(16,9): error TS2571: Object is of type 'unknown'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(16,15): error TS2339: Property '#bar' does not exist on type 'any'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(17,9): error TS2571: Object is of type 'unknown'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(20,15): error TS2339: Property '#foo' does not exist on type 'never'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(21,15): error TS2339: Property '#m' does not exist on type 'never'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(22,15): error TS2339: Property '#baz' does not exist on type 'never'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(23,15): error TS2339: Property '#bar' does not exist on type 'never'.
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(24,15): error TS2339: Property '#foo' does not exist on type 'never'.


==== tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts (12 errors) ====
    class A {
        #foo = true;
        static #baz = 10;
        static #m() {}
        method(thing: any) {
            thing.#foo; // OK
            thing.#m();
            thing.#baz;
            thing.#bar; // Error
                  ~~~~
!!! error TS2339: Property '#bar' does not exist on type 'any'.
            thing.#foo();
        }
        methodU(thing: unknown) {
            thing.#foo;
            ~~~~~
!!! error TS2571: Object is of type 'unknown'.
            thing.#m();
            ~~~~~
!!! error TS2571: Object is of type 'unknown'.
            thing.#baz;
            ~~~~~
!!! error TS2571: Object is of type 'unknown'.
            thing.#bar;
            ~~~~~
!!! error TS2571: Object is of type 'unknown'.
                  ~~~~
!!! error TS2339: Property '#bar' does not exist on type 'any'.
            thing.#foo();
            ~~~~~
!!! error TS2571: Object is of type 'unknown'.
        }
        methodN(thing: never) {
            thing.#foo;
                  ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'never'.
            thing.#m();
                  ~~
!!! error TS2339: Property '#m' does not exist on type 'never'.
            thing.#baz;
                  ~~~~
!!! error TS2339: Property '#baz' does not exist on type 'never'.
            thing.#bar;
                  ~~~~
!!! error TS2339: Property '#bar' does not exist on type 'never'.
            thing.#foo();
                  ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'never'.
        }
    };
    